Header Completed (Not Functional Yet)

--- a/css/_login.scss
+++ b/css/_login.scss
@@ -35,7 +35,7 @@
 /*buttons*/
 .loginForm .action-button {
 	width: 100px;
-	background: #A7C7E7;
+	background: #5161ce;
 	font-weight: bold;
 	color: white;
 	border: 0 none;
@@ -46,7 +46,7 @@
 }
 
 .loginForm .action-button:hover, .loginForm .action-button:focus {
-	box-shadow: 0 0 0 2px white, 0 0 0 3px #A7C7E7;
+	box-shadow: 0 0 0 2px white, 0 0 0 3px #5161ce;
 }
 
 /*headings*/
