--- a/css/_login.scss
+++ b/css/_login.scss
@@ -1,64 +1,68 @@
-.loginForm {
-	width: 400px;
-	margin: 50px auto;
-	text-align: center;
-	position: relative;
-}
-
-.loginForm fieldset {
-	background: white;
-	border: 0 none;
-	border-radius: 3px;
-	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-	padding: 20px 30px;
-	box-sizing: border-box;
-	width: 80%;
-	margin: 0 10%;
-	
-	/*stacking fieldsets above each other*/
-	position: relative;
-}
-
-/*inputs*/
-.loginForm input, .loginForm textarea {
-	padding: 15px;
-	border: 1px solid #ccc;
-	border-radius: 3px;
-	margin-bottom: 10px;
+.form-data{
 	width: 100%;
-	box-sizing: border-box;
-	font-family: montserrat;
-	color: #2C3E50;
-	font-size: 13px;
+	max-width: 35rem;
+	margin: 3rem;
 }
 
-/*buttons*/
-.loginForm .action-button {
-	width: 100px;
-	background: #5161ce;
-	font-weight: bold;
+.form-data form{
+	background: white;
+	border: 2px solid #eee;
+	display: flex;
+	flex-direction: column;
+	padding: 2rem 4rem;
+	text-align: center;
+}
+
+.logo img{
+	width: 15rem;
+	border-bottom: 2.5rem;
+}
+
+.form-data form input{
+	padding: 0.8rem;
+	margin-bottom: 0.5rem;
+	border: 2px solid #eee;
+	border-radius: 0.4rem;
+}
+
+.form-btn{
+	background-color: #5161ce;
+	border: none;
 	color: white;
-	border: 0 none;
-	border-radius: 1px;
-	cursor: pointer;
-	padding: 10px 5px;
-	margin: 10px 5px;
+	margin: 1rem 0 1.5rem;
+	height: 3rem;
+	border-radius: 0.4rem;
+	font-weight: bold;
+	font-size: 1.4rem;
 }
 
-.loginForm .action-button:hover, .loginForm .action-button:focus {
-	box-shadow: 0 0 0 2px white, 0 0 0 3px #5161ce;
+.reset{
+	font-size: 1.2rem;
+	font-family: Arial;
+	color: #003569
 }
 
-/*headings*/
-.fs-title {
-	font-size: 15px;
-	text-transform: uppercase;
-	color: #2C3E50;
-	margin-bottom: 10px;
+.sign-up{
+	background-color: white;
+	border: 2px solid #eee;
+	font-size: 1.2rem;
+	color: #262626;
+	padding: 2rem 0;
+	margin: 1rem 0;
+	font-family: Arial;
 }
-.fs-subtitle {
-	font-weight: normal;
-	font-size: 13px;
-	color: #666;
-	margin-bottom: 20px;
+
+.sign-up a {
+	color: #5161ce;
+}
+
+footer{
+	padding: 5rem;
+
+}
+
+footer .container{
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
 }
