--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,251 +1,137 @@
-.loginForm {
-  width: 400px;
-  margin: 50px auto;
-  text-align: center;
-  position: relative;
-}
-
-.loginForm fieldset {
-  background: white;
-  border: 0 none;
-  border-radius: 3px;
-  -webkit-box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-          box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
-  padding: 20px 30px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 80%;
-  margin: 0 10%;
-  /*stacking fieldsets above each other*/
-  position: relative;
-}
-
-/*inputs*/
-.loginForm input, .loginForm textarea {
-  padding: 15px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
-  margin-bottom: 10px;
+.form-data {
   width: 100%;
+  max-width: 35rem;
+  margin: 3rem;
+}
+
+.form-data form {
+  background: white;
+  border: 2px solid #eee;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 2rem 4rem;
+  text-align: center;
+}
+
+.logo img {
+  width: 15rem;
+  border-bottom: 2.5rem;
+}
+
+.form-data form input {
+  padding: 0.8rem;
+  margin-bottom: 0.5rem;
+  border: 2px solid #eee;
+  border-radius: 0.4rem;
+}
+
+.form-btn {
+  background-color: #5161ce;
+  border: none;
+  color: white;
+  margin: 1rem 0 1.5rem;
+  height: 3rem;
+  border-radius: 0.4rem;
+  font-weight: bold;
+  font-size: 1.4rem;
+}
+
+.reset {
+  font-size: 1.2rem;
+  font-family: Arial;
+  color: #003569;
+}
+
+.sign-up {
+  background-color: white;
+  border: 2px solid #eee;
+  font-size: 1.2rem;
+  color: #262626;
+  padding: 2rem 0;
+  margin: 1rem 0;
+  font-family: Arial;
+}
+
+.sign-up a {
+  color: #5161ce;
+}
+
+footer {
+  padding: 5rem;
+}
+
+footer .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: montserrat;
-  color: #2C3E50;
-  font-size: 13px;
+  font-size: 10px;
 }
 
-/*buttons*/
-.loginForm .action-button {
-  width: 100px;
-  background: #5161ce;
-  font-weight: bold;
-  color: white;
-  border: 0 none;
-  border-radius: 1px;
-  cursor: pointer;
-  padding: 10px 5px;
-  margin: 10px 5px;
+body {
+  background-color: #fafafa;
 }
 
-.loginForm .action-button:hover, .loginForm .action-button:focus {
-  -webkit-box-shadow: 0 0 0 2px white, 0 0 0 3px #5161ce;
-          box-shadow: 0 0 0 2px white, 0 0 0 3px #5161ce;
+.wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100vh;
+  width: 100%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 10rem;
 }
 
-/*headings*/
-.fs-title {
-  font-size: 15px;
-  text-transform: uppercase;
-  color: #2C3E50;
-  margin-bottom: 10px;
+.container {
+  width: 100%;
+  max-width: 93rem;
+  margin: 3rem auto 0;
+  background-color: violet;
 }
 
-.fs-subtitle {
-  font-weight: normal;
-  font-size: 13px;
-  color: #666;
-  margin-bottom: 20px;
+.wrapper > .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 8rem;
 }
 
-.navbar-logo {
-  padding: 15px;
-  color: #fff;
-}
-
-.navbar-mainbg {
-  background-color: #5161ce;
-  padding: 0px;
-}
-
-#navbarSupportedContent {
-  overflow: hidden;
-  position: relative;
-}
-
-#navbarSupportedContent ul {
-  padding: 0px;
-  margin: 0px;
-}
-
-#navbarSupportedContent ul li a i {
-  margin-right: 10px;
-}
-
-#navbarSupportedContent li {
-  list-style-type: none;
-  float: left;
-}
-
-#navbarSupportedContent ul li a {
-  color: rgba(255, 255, 255, 0.5);
-  text-decoration: none;
-  font-size: 15px;
-  display: block;
-  padding: 20px 20px;
-  -webkit-transition-duration: 0.6s;
-          transition-duration: 0.6s;
-  -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-          transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  position: relative;
-}
-
-#navbarSupportedContent > ul > li.active > a {
-  color: #5161ce;
-  background-color: transparent;
-  -webkit-transition: all 0.7s;
-  transition: all 0.7s;
-}
-
-#navbarSupportedContent a:not(:only-child):after {
-  content: "\f105";
-  position: absolute;
-  right: 20px;
-  top: 10px;
-  font-size: 14px;
-  font-family: "Font Awesome 5 Free";
-  display: inline-block;
-  padding-right: 3px;
-  vertical-align: middle;
-  font-weight: 900;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-#navbarSupportedContent .active > a:not(:only-child):after {
-  -webkit-transform: rotate(90deg);
-          transform: rotate(90deg);
-}
-
-.hori-selector {
-  display: inline-block;
-  position: absolute;
-  height: 100%;
-  top: 0px;
-  left: 0px;
-  -webkit-transition-duration: 0.6s;
-          transition-duration: 0.6s;
-  -webkit-transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-          transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  background-color: #fff;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  margin-top: 10px;
-}
-
-.hori-selector .right,
-.hori-selector .left {
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  background-color: #fff;
-  bottom: 10px;
-}
-
-.hori-selector .right {
-  right: -25px;
-}
-
-.hori-selector .left {
-  left: -25px;
-}
-
-.hori-selector .right:before,
-.hori-selector .left:before {
-  content: '';
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: #5161ce;
-}
-
-.hori-selector .right:before {
-  bottom: 0;
-  right: -25px;
-}
-
-.hori-selector .left:before {
-  bottom: 0;
-  left: -25px;
-}
-
-@media (min-width: 992px) {
-  .navbar-expand-custom {
-    -ms-flex-flow: row nowrap;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-            flex-flow: row nowrap;
-    -ms-flex-pack: start;
-    -webkit-box-pack: start;
-            justify-content: flex-start;
-  }
-  .navbar-expand-custom .navbar-nav {
-    -ms-flex-direction: row;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-            flex-direction: row;
-  }
-  .navbar-expand-custom .navbar-toggler {
-    display: none;
-  }
-  .navbar-expand-custom .navbar-collapse {
-    display: -ms-flexbox !important;
-    display: -webkit-box !important;
-    display: flex !important;
-    -ms-flex-preferred-size: auto;
-    flex-basis: auto;
-  }
-}
-
-@media (max-width: 991px) {
-  #navbarSupportedContent ul li a {
-    padding: 12px 30px;
-  }
-  .hori-selector {
-    margin-top: 0px;
-    margin-left: 10px;
-    border-radius: 0;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
-  }
-  .hori-selector .left,
-  .hori-selector .right {
-    right: 10px;
-  }
-  .hori-selector .left {
-    top: -25px;
-    left: auto;
-  }
-  .hori-selector .right {
-    bottom: -25px;
-  }
-  .hori-selector .left:before {
-    left: -25px;
-    top: -25px;
-  }
-  .hori-selector .right:before {
-    bottom: -25px;
-    left: -25px;
-  }
+.phone-app {
+  background: url("../images/phoneApp.png");
+  background-size: 72rem;
+  background-repeat: no-repeat;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  height: 52rem;
 }
 /*# sourceMappingURL=mystyle.css.map */
