--- a/css/style.css
+++ b/css/style.css
@@ -437,11 +437,12 @@ li.ap-title{
 /*Navbar CSS*/
 .navbar{
     position: fixed;
-    background-color: #043AAC; /*TODO for Temi: Make Transparent after addinf background*/
+    background-color: #043AAC; /*TODO for Temi: Make Transparent after adding background*/
     width: 100%;
     padding: 30px 0;
     top: 0;
-    z-index: 999;
+    bottom: 0;
+    z-index: 9999;
     transition: .3s linear;
 }
 
@@ -518,4 +519,67 @@ li.ap-title{
 
 .nothing{
     margin-top: 15em; /*DELETE SOON*/
+}
+
+/*Help Section CSS*/
+.container-fluid{
+    width: 40%;
+    margin: 0 auto;
+    margin-top: 100px;
+    justify-content: center;
+}
+
+.container-fluid h2{
+    color: #043AAC;
+    position: relative;
+    width: 23rem;
+}
+
+.container-fluid h2::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 12px;
+    width: 67px;
+    height: 2px;
+    background-color: #043AAC;
+}
+
+.accordion{
+    width: 100%;
+    padding: 0 5px;
+    border: 2px solid #043AAC;
+    cursor: pointer;
+    border-radius: 50px;
+    display: flex;
+    margin: 10px 0;
+    align-items: center;
+}
+
+.accordion .icon{
+    margin: 0 10px 0 0;
+    width: 30px;
+    height: 30px;
+    background: url("..images/button.jpg") no repeat 8px 7px #043AAC;
+    border-radius: 50%;
+    float: left;
+    transition: all .5s ease-in;
+}
+.accordion h5{
+    font-size: 22px;
+    margin: 0;
+    padding: 3px 0 0 0;
+    font-weight: normal;
+
+}
+
+.panel{
+    padding: 0 15px;
+    border-left: 1px solid #043AAC;
+    margin-left: 25px;
+    font-size: 14px;
+    text-align: justify;
+    overflow: hidden;
+    max-height: 300px;
+    transition: all .5s ease-in;
 }
